# ngrok-crew

./: .gitignore  README.md  pyproject.toml  test_mcp.py
src/: config.py  crew.py  ngrok_mcp_server.py
src/config/: tasks.yaml
src/ngrok_tester/: crew.py  debug_tools.py  ngrok_mcp_server.py  test_direct.py  test_http.py
src/ngrok_tester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ngrok_tester/config/: agents.yaml  tasks.yaml
