[project]
name = "ngrok-tester"
version = "1.0.0"
description = "Crew to test ngrok endpoint via MCP stdio"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "crewai>=0.80.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.crewai]
entry_point = "crew:main"
