[project]
name = "ngrok-tester"
version = "1.0.2"
description = "Crew to test ngrok endpoint via simple HTTP tool"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.crewai]
entry_point = "ngrok_tester.crew:main"
