[project]
name = "ngrok-tester"
version = "1.0.3"
description = "Crew to test ngrok endpoint via simple HTTP tool"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
]

[project.scripts]
ngrok_tester = "ngrok_tester.crew:main"
run_crew = "ngrok_tester.crew:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngrok_tester"]
